# villa-x

./: .env.example  .gitattributes  .gitignore  README.md  eval_simpler.sh  index.html  pyproject.toml  run.py  run.sh
.github/workflows/: codeql.yml
configs/: eval.yaml  eval_simpler.yaml  train.yaml
demo/: notebook.ipynb
igor/: __init__.py
igor/models/: __init__.py  base.py  modeling_mixin.py
igor/models/lam/: embed.py  model.py  st.py  transformer.py  utils.py  vq.py
igor/models/util/: augmentations.py  modeling.py  preprocessing.py
igor/utils/: compat.py  count_params.py  json_encoder.py
lam/: __init__.py  base.py  model.py  modeling_mixin.py  st.py  transformer.py  vq.py
scripts/: eval.sh
src/agent/: eval.py
src/agent/env_adapter/: base.py  ensembler.py  simpler.py
src/model/: hpt.py
src/model/vla/: joint_model.py  mixture.py  villax.py
src/tokenizer/: lam.py
src/utils/: metric.py
static/css/: index.css
static/js/: index.js
villax/dataset/: collator.py
villax/dataset/oxe/: __init__.py  dataset.py  mixture.py  schema.py
villax/dataset/oxe/make_dataset/: compute_stats.py  dataset_configs.py  dataset_transforms.py  make_dataset.py  prepare_kwargs.py  standardize.py
villax/dataset/oxe/make_dataset/transforms/: obs_transforms.py  traj_transforms.py
villax/dataset/oxe/make_dataset/utils/: data.py
villax/dataset/utils/: metric.py  normalize.py  preprocessing.py  seed.py  tf_rotation.py
villax/evaluation/: villax_simpler.py
villax/model/: hpt.py  lora.py
villax/model/paligemma/: gemma.py  load.py  modules.py  processing.py  siglip.py
villax/model/vla/: joint_model.py  mixture.py  policy_model.py  processing.py
villax/tokenizer/: lam.py
villax/trainer/: model_averaging.py  trainer.py
villax/utils/: images.py  monitor.py  normalize.py
